--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,4 @@
-click
-Flask
-Flask-Cors
-gunicorn
-itsdangerous
-Jinja2
-joblib
-MarkupSafe
 numpy
 pandas
-pickle-mixin
-python-dateutil
-pytz
 scikit-learn
-scipy
-six
-sklearn
-threadpoolctl
-Werkzeug
+streamlit
